--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,2 +1,50 @@
 .header {
+  padding: 0 108px;
+  min-height: 82px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header__logo {
+  width: 159px;
+  height: 26px;
+  background: center / contain no-repeat url(../../images/logo-header.png);
+}
+
+.header__links {
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.header__link {
+  margin-right: 55px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24px;
+}
+
+.header__link:last-child {
+  margin-right: 0;
+}
+
+.header__link:nth-child(3) {
+  margin-right: 43px;
+}
+
+.header__link_border_true {
+  width: 165px;
+  height: 50px;
+  border: 1px solid #000;
+  border-radius: 120px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
 }
