--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
 @import url(./vendor/normalize.css);
 @import url(./vendor/fonts/stylesheet.css);
+@import url(./utils/css-variables.css);
+@import url(./utils/font_display.css);
 @import url(./components/app/app.css);
 @import url(./components/header/header.css);
 @import url(./components/footer/footer.css);
 @import url(./components/main/main.css);
+@import url(./components/main/tasks/tasks.css);
