--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,4 @@
 @import url(./components/header/header.css);
 @import url(./components/footer/footer.css);
 @import url(./components/main/main.css);
+@import url(./utils/font_display.css);
