Add: component ProductIntroduction

--- a/src/index.css
+++ b/src/index.css
@@ -7,4 +7,4 @@
 @import url(./components/footer/footer.css);
 @import url(./components/main/main.css);
 @import url(./components/main/tasks/tasks.css);
-
+@import url(./components/main/product-introduction/product-introduction.css);
