--- a/src/components/main/vacancies/vacancies.css
+++ b/src/components/main/vacancies/vacancies.css
@@ -60,6 +60,10 @@
   color: #000000;
 }
 
+.vacancies__direction:hover {
+  cursor: pointer;
+}
+
 .vacancies__job:last-child {
   padding: 10px 16px 10px 24px;
   border-radius: 0px 8px 8px 0px;
@@ -75,4 +79,11 @@
   grid-auto-rows: minmax(min-content, max-content);
   gap: 24px;
   justify-content: center;
+}
+
+.vacancies__button {
+}
+
+.vacancies__button_hidden {
+  display: none;
 }
