--- a/src/components/main/vacancies/vacancy/vacancy.css
+++ b/src/components/main/vacancies/vacancy/vacancy.css
@@ -36,6 +36,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  text-decoration: none;
 }
 
 .vacancy:hover .vacancy__front {
@@ -95,4 +96,5 @@
   font-size: 18px;
   line-height: 24px;
   text-align: end;
+  color: #000;
 }
