--- a/src/components/main/vacancies/vacancy/vacancy.css
+++ b/src/components/main/vacancies/vacancy/vacancy.css
@@ -2,7 +2,7 @@
   position: relative;
   width: 100%;
   height: 220px;
-  margin: 50px auto;
+  margin: 0;
   cursor: pointer;
 }
 
@@ -18,6 +18,9 @@
   transition-property: transform;
   backface-visibility: hidden;
   border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .vacancy__back {
@@ -50,6 +53,12 @@
   transition: transform 1s;
 }
 
+.vacancy__profession-conatiner {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 .vacancy__profession {
   margin: 20px 20px 8px 20px;
   font-style: normal;
@@ -58,8 +67,16 @@
   line-height: 24px;
 }
 
+.vacancy__profession-logo {
+  margin: 20px 20px 0 0;
+  width: 16px;
+  height: 16px;
+  border-radius: 90%;
+  background-color: var(--blue);
+}
+
 .vacancy__well {
-  margin: 0px 20px 70px 20px;
+  margin: 0px 20px 0 20px;
   font-style: normal;
   font-weight: 700;
   font-size: 24px;
@@ -74,9 +91,22 @@
   line-height: 24px;
 }
 
+.vacancy__back-container {
+  margin: 0;
+}
+
+.vacancy__info-title {
+  margin: 20px 0 12px 20px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28px;
+  color: var(--black);
+}
+
 .vacancy__info-container {
   padding: 0;
-  margin: 20px 20px 20px 35px;
+  margin: 0 20px 0 35px;
   transform: rotateY(360deg);
   list-style-type: disc;
 }
@@ -90,11 +120,11 @@
 }
 
 .vacancy__info-more {
-  margin: 0 20px 20px 0;
+  margin: 0 50px 20px 0;
   font-style: normal;
   font-weight: 400;
-  font-size: 18px;
-  line-height: 24px;
+  font-size: 20px;
+  line-height: 122%;
   text-align: end;
-  color: #000;
+  color: var(--blue);
 }
