Add: component practicum

--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,4 @@
 @import url(./components/main/vacancies/vacancy/vacancy.css);
 @import url(./components/not-found/not-found.css);
 @import url(./components/vacancy-info/vacancy-info.css);
+@import url(./components/main/practicum/practicum.css);
