--- a/src/components/main/vacancies/vacancies.css
+++ b/src/components/main/vacancies/vacancies.css
@@ -5,7 +5,7 @@
 }
 
 .vacancies__title {
-  margin: 0 0 28px 0;
+  margin: 0 0 24px;
   font-style: normal;
   font-weight: 500;
   font-size: 40px;
