Finish: component Tasks

--- a/src/components/main/tasks/tasks.css
+++ b/src/components/main/tasks/tasks.css
@@ -1,16 +1,15 @@
 .tasks {
-  padding: 0 108px;
-  background-color: #f7f7f8;
-  min-height: 779px;
+  padding: 80px 108px 80px 108px;
+  background-color: var(--background);
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .tasks__container {
+  margin: 0;
   padding: 0;
   width: 100%;
-  margin: 104px 0 80px 0;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -20,25 +19,25 @@
 .task {
   width: 100%;
   max-width: 600px;
-  min-height: 595px;
+  min-height: 573px;
   display: flex;
   flex-direction: column;
+  background-color: var(--white);
+  border-radius: 60px;
 }
 
-.task:last-child {
-  margin-left: 24px;
+.task:first-child {
+  margin-right: 24px;
 }
 
 .task__image {
-  width: 89%;
-  max-width: 484px;
   height: 212px;
-  margin: 40px auto 0;
+  margin: 40px auto 28px;
   object-fit: contain;
 }
 
 .task__content {
-  margin: 32px 40px 40px 40px;
+  margin: 0 40px 46px 40px;
 }
 
 .task__title {
@@ -47,6 +46,7 @@
   font-weight: 500;
   font-size: 40px;
   line-height: 47px;
+  color: var(--black);
 }
 
 .task__container {
@@ -58,5 +58,6 @@
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
-  line-height: 28px;
+  line-height: 122%;
+  color: var(--black);
 }
