The first desktop block is ready

--- a/src/components/main/feedback/feedback.css
+++ b/src/components/main/feedback/feedback.css
@@ -1,9 +1,15 @@
 .feedback {
-
+  background: #858585;
 }
 
 .feedback__title {
-
+  margin: 0;
+  padding: 0;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 47px;
+  color: #FFFFFF;
 }
 
 .feedback__container {
