--- a/src/components/main/howToBecome/howToBecome.css
+++ b/src/components/main/howToBecome/howToBecome.css
@@ -1,4 +1,6 @@
 @import url(../../../vendor/fonts/stylesheet.css);
+@import url(../../../utils/css-variables.css);
+
 
 @keyframes inAndOut {
   0% {
@@ -14,7 +16,16 @@
     right: -1000px;
   }
   100% {
-    right: 718px;
+    right: 828px;
+  }
+}
+
+@keyframes moveRectangle1_mobile {
+  0% {
+    right: -1000px;
+  }
+  100% {
+    right: 0;
   }
 }
 
@@ -23,7 +34,16 @@
     right: -1000px;
   }
   100% {
-    right: 360px;
+    right: 520px;
+  }
+}
+
+@keyframes moveRectangle2_mobile {
+  0% {
+    right: -1000px;
+  }
+  100% {
+    right: 0;
   }
 }
 
@@ -32,27 +52,55 @@
     right: -1000px;
   }
   100% {
+    right: 196px;
+  }
+}
+
+@keyframes moveRectangle3_mobile {
+  0% {
+    right: -1000px;
+  }
+  100% {
     right: 0;
   }
 }
+
+@keyframes moveButton {
+  0% {
+    right: -1000px;
+  }
+  100% {
+    right: 0;
+  }
+}
+
 .howToBecome {
   font-family: 'Yandex Sans Display';
-  color: #262626;
+  color: var(--black);
   padding: 0 108px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-start;
 }
+
+.howToBecome__list-wrapper {
+  width: 100%;
+  margin: 60px 0 80px 0;
+  display: flex;
+  position: relative;
+  flex-direction: row;
+  align-items: center;
+  overflow: hidden;
+}
+
 .howToBecome__list {
-  margin: 60px 0 48px 0;
+  margin: 0;
   padding: 0;
   width: 100%;
-  height: 144px;
-  position: relative;
+  height: 128px;
   display: flex;
   flex-direction: row;
-  overflow: hidden;
   list-style: none;
 }
 
@@ -64,65 +112,47 @@
   font-weight: 500;
   font-size: 40px;
   line-height: 47px;
-  align-self: flex-start;
 }
 
 .howToBecome__header_animation {
   animation: 2s ease-in-out inAndOut;
 }
 
-.howToBecome__firstTask {
-  width: 506px;
+.howToBecome__task {
+  width: 396px;
   height: 100%;
   padding: 48px 65px;
   border-radius: 90px;
-  background-color: #CCE0F7;;
+  gap: 16px;
   position: absolute;
   box-sizing: border-box;
-  gap: 12px;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
 }
 
-.howToBecome__firstTask_animation {
+.howToBecome__task_first {
+  background-color: var(--gray);
+}
+
+.howToBecome__task_second {
+  background-color: var(--white);
+}
+
+.howToBecome__task_third {
+  background-color: var(--light-blue);
+}
+
+.firstTask_animation {
   animation: 1s ease-in-out moveRectangle1 both;
 }
 
-.howToBecome__secondTask {
-  width: 506px;
-  height: 144px;
-  padding: 48px 65px;
-  border-radius: 90px;
-  background-color: #BBD6F4;
-  position: absolute;
-  box-sizing: border-box;
-  gap: 12px;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-}
-.howToBecome__secondTask_animation {
+.secondTask_animation {
   animation: 1s ease-in-out 1s moveRectangle2 both;
 }
 
-.howToBecome__thirdTask {
-  width: 506px;
-  height: 144px;
-  padding: 48px 65px;
-  border-radius: 90px;
-  background-color: #AACCF1;
-  position: absolute;
-  box-sizing: border-box;
-  gap: 12px;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-}
-.howToBecome__thirdTask_animation {
+.thirdTask_animation {
   animation: 1s ease-in-out 2s moveRectangle3 both;
 }
 
@@ -132,9 +162,9 @@
   text-align: left;
   font-family: 'Yandex Sans Text';
   font-style: normal;
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 120%;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 133%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -152,28 +182,167 @@
 
 .howToBecome__button {
   margin: 0;
-  margin-bottom: 80px;
   padding: 0;
   border: 0;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  justify-self: center;
-  padding: 0px;
-  border-radius: 120px;
-  background: #373737;
-  color: #FFF;
+  border-radius: 60px;
+  background: var(--blue);
+  color: var(--white);
   backdrop-filter: blur(6px);
-  width: 286px;
-  height: 60px;
+  width: 276px;
+  height: 128px;
+  position: absolute;
   font-family: 'Yandex Sans Text';
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 125%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
+
+.button_animation {
+  animation: 1s ease-in-out 3s moveButton both;
+}
+
 .howToBecome__button:hover {
+  background: var(--blue-hover);
   cursor: pointer;
-  opacity: .8;
+}
+.howToBecome__button_form {
+  display: none;
+}
+
+@media (max-width: 1439.98px) {
+  .howToBecome__list-wrapper {
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+  }
+  .howToBecome__task {
+    position: relative;
+    height: 128px;
+  }
+  .howToBecome__button{
+    width: 396px;
+    position: relative;
+  }
+  .howToBecome__list {
+    margin-bottom: 16px;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    height: 100%;
+    gap: 16px;
+  }
+  .firstTask_animation,
+  .secondTask_animation,
+  .thirdTask_animation,
+  .button_animation {
+    animation: 2s ease-in-out inAndOut;
+  }
+
+  .howToBecome {
+    align-items: center;
+  }
+
+}
+
+@media (max-width: 1199.98px) {
+  .howToBecome {
+    padding: 0;
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .howToBecome__task,
+  .howToBecome__button {
+    width: 350px;
+  }
+  .howToBecome__header {
+    margin-top: 36px;
+    font-size: 28px;
+    line-height: 114%;
+  }
+  .howToBecome__list-wrapper {
+    margin: 0;
+    margin-top: 24px;
+  }
+}
+
+@media (max-width: 375px) {
+  .howToBecome {
+    padding: 0 16px;
+    align-items: flex-start;
+    box-sizing: border-box;
+  }
+  .howToBecome__task {
+    width: 343px;
+    height: 96px;
+    padding: 32px 40px;
+    gap: 12px;
+    position: absolute;
+  }
+  .howToBecome__button {
+    margin-bottom: 36px;
+    width: 343px;
+    height: 60px;
+    border-radius: 120px;
+    font-size: 18px;
+    line-height: 133%;
+    padding: 0;
+    position: absolute;
+    top: 348px;
+  }
+  .howToBecome__counter {
+    font-size: 28px;
+    line-height: 114%;
+  }
+  .howToBecome__context {
+    font-size: 16px;
+    line-height: 125%;
+    justify-content: center;
+  }
+
+  .howToBecome__button_form {
+    padding: 0;
+    margin: 0;
+    display: flex;
+  }
+  .howToBecome__button_connect {
+    display: none;
+  }
+  .howToBecome__list-wrapper {
+    position: relative;
+    height: 444px;
+  }
+  .howToBecome__list {
+    height: 100%;
+    margin: 0;
+  }
+
+  .firstTask_animation {
+    animation: 1s ease-in-out moveRectangle1_mobile both;
+  }
+  .secondTask_animation {
+    animation: 1s ease-in-out 1s moveRectangle2_mobile both;
+  }
+  .thirdTask_animation {
+    animation: 1s ease-in-out 2s moveRectangle3_mobile both;
+  }
+  .button_animation {
+    animation: 1s ease-in-out 3s moveButton both;
+  }
+
+  .howToBecome__task_first {
+    top: 0;
+  }
+  .howToBecome__task_second {
+    top: 116px;
+  }
+  .howToBecome__task_third {
+    top: 232px;
+  }
 }
