--- a/src/components/main/whatAwaitsYou/whatAwaitsYou.css
+++ b/src/components/main/whatAwaitsYou/whatAwaitsYou.css
@@ -1,4 +1,5 @@
 @import url(../../../vendor/fonts/stylesheet.css);
+@import url(../../../utils/css-variables.css);
 
 @keyframes inAndOut {
   0% {
@@ -17,6 +18,14 @@
     right: 624px;
   }
 }
+@keyframes Rectangle1_mobile {
+  0% {
+    right: -300px;
+  }
+  100% {
+    right: 0;
+  }
+}
 
 @keyframes Rectangle2 {
   0% {
@@ -24,6 +33,14 @@
   }
   100% {
     right: 312px;
+  }
+}
+@keyframes Rectangle2_mobile {
+  0% {
+    right: -1000px;
+  }
+  100% {
+    right: 0;
   }
 }
 
@@ -35,23 +52,32 @@
     right: 0px;
   }
 }
+@keyframes Rectangle3_mobile {
+  0% {
+    right: -1000px;
+  }
+  100% {
+    right: 0px;
+  }
+}
 
 .whatAwaitsYou {
   font-family: 'Yandex Sans Display';
-  color: #262626;
+  color: var(--black);
   padding: 0 108px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   min-height: 304px;
+  position: relative;
 }
 
 .whatAwaitsYou__list {
   margin: 60px 0 48px 0;
   padding: 0;
   width: 912px;
-  height: 144px;
+  height: 128px;
   position: relative;
   display: flex;
   flex-direction: row;
@@ -78,22 +104,26 @@
   width: 288px;
   height: 100%;
   position: absolute;
-  padding: 48px 65px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
   border-radius: 90px;
   box-sizing: border-box;
   gap: 12px;
 }
 
 .whatAwaitsYou__item_first {
-  background-color: #CCE0F7;
+  background-color: var(--white);
 }
 
 .whatAwaitsYou__item_second {
-  background-color: #BBD6F4;
+  background-color: var(--gray);
 }
 
 .whatAwaitsYou__item_third {
-  background-color: #AACCF1;
+  background-color: var(--light-blue);
 }
 
 .firstAnimation {
@@ -110,21 +140,32 @@
 
 .whatAwaitsYou__context {
   padding: 0;
-  margin: 0 auto;
-  display: flex;
+  margin: 0;
   text-align: center;
   font-family: 'Yandex Sans Text';
   font-style: normal;
-  font-weight: 700;
+  font-weight: 400;
   font-size: 20px;
   line-height: 120%;
-  width: 135px;
-  height: 48px;
+  width: 100%;
+}
+.whatAwaitsYou__cat {
+  position: absolute;
+  top: 0;
+  left: 140px;
+}
+
+.whatAwaitsYou__context_mobile1,
+.whatAwaitsYou__context_mobile2,
+.whatAwaitsYou__context_mobile3 {
+  display: none;
 }
 
 @media (max-width: 1439.98px) {
   .whatAwaitsYou {
     flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
   }
   .whatAwaitsYou__header {
     margin-top: 48px;
@@ -132,9 +173,16 @@
   .whatAwaitsYou__list {
     width: 100%;
     height: 100%;
+    margin-bottom: 16px;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    height: 100%;
+    gap: 16px;
   }
   .whatAwaitsYou__item {
     position: relative;
+    height: 128px;
   }
   .firstAnimation,
   .secondAnimation,
@@ -148,22 +196,77 @@
     justify-content: center;
     align-items: center;
   }
-}
-
-@media (max-width: 1199.98px) {
-  .whatAwaitsYou__item {
-    width: 200px;
-    padding: 24px 32px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+  .whatAwaitsYou__cat {
+    display: none;
   }
 }
 
-@media (max-width: 991.98px) {
+@media (max-width: 1199.98px) {
+  .whatAwaitsYou {
+    padding: 0;
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 767.98px) {
   .whatAwaitsYou__list {
-    justify-content: center;
+    margin: 0;
+    margin-top: 24px;
+  }
+  .whatAwaitsYou__header {
+    margin-top: 36px;
+    font-size: 28px;
+    line-height: 114%;
+  }
+  .whatAwaitsYou__item {
+    width: 350px;
+  }
+}
+
+@media (max-width: 375px) {
+  .whatAwaitsYou {
+    padding: 0 16px;
+    align-items: flex-start;
+    box-sizing: border-box;
+  }
+  .whatAwaitsYou__item {
+    width: 343px;
+    height: 88px;
     gap: 20px;
+    position: absolute;
+  }
+  .whatAwaitsYou__list {
+    position: relative;
+    height: 340px;
+  }
+  .whatAwaitsYou__item_first {
+    top: 0;
+  }
+  .whatAwaitsYou__item_second {
+    top: 108px;
+  }
+  .whatAwaitsYou__item_third {
+    top: 216px;
+  }
+  .firstAnimation {
+    animation: 1s ease-in-out Rectangle1_mobile both;
+  }
+
+  .secondAnimation {
+    animation: 1s ease-in-out 1s Rectangle2_mobile both;
+  }
+
+  .thirdAnimation {
+    animation: 1s ease-in-out 2s Rectangle3_mobile both;
+  }
+  .whatAwaitsYou__context_mobile1,
+  .whatAwaitsYou__context_mobile2,
+  .whatAwaitsYou__context_mobile3 {
+    display: block;
+  }
+  .whatAwaitsYou__context_desc1,
+  .whatAwaitsYou__context_desc2,
+  .whatAwaitsYou__context_desc3 {
+    display: none;
   }
 }
