--- a/src/components/main/no-work/no-work.css
+++ b/src/components/main/no-work/no-work.css
@@ -1,55 +1,55 @@
 .no-work {
-  position: relative; /* подключен popup */
+  padding: 80px 108px 96px 108px;
+  background-color: var(--gray);
   display: flex;
   flex-direction: column;
-  align-items: center;
-  padding: 60px 0;
-  width: 100%;
-  background: #858585;;
-  color: #000000;
+  position: relative;
+  overflow: hidden;
 }
 
-.no-work__title{
-  margin: 0;
-  padding: 0;
+.no-work__title {
+  margin: 0 0 24px 0;
   font-style: normal;
   font-weight: 500;
-  font-size: 60px;
-  line-height: 72px;
+  font-size: 52px;
+  line-height: 110%;
+  color: var(--black);
 }
 
-.no-work__text{
-  margin: 16px 0 0;
-  padding: 0;
+.no-work__text {
+  margin: 0 0 30px 0;
   font-style: normal;
   font-weight: 400;
-  font-size: 18px;
-  line-height: 24px;
+  font-size: 20px;
+  line-height: 26px;
+  color: var(--black);
 }
 
 .no-work__button {
-  margin: 40px 0 0;
-  padding: 0;
-  border: 0;
+  width: 289px;
+  height: 60px;
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
-  width: 315px;
-  height: 60px;
-  background: #373737;
-  backdrop-filter: blur(6px);
+  background-color: var(--blue);
+  border: none;
   border-radius: 120px;
-  font-style: normal;font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  color: #fff;
-  flex: none;
-  order: 0;
-  flex-grow: 0;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 24px;
+  color: var(--white);
 }
 
 .no-work__button:hover {
-  cursor: pointer;
-  opacity: .8;
+  opacity: 0.8;
+}
+
+.no-work__img {
+  position: absolute;
+  top: 4px;
+  right: -60px;
+  width: 703px;
+  height: 375px;
+  background: center / contain no-repeat url(../../../images/Picture.png);
 }
