--- a/src/components/main/practicum/practicum.css
+++ b/src/components/main/practicum/practicum.css
@@ -1,5 +1,5 @@
 .practicum {
-  padding: 80px 108px 85px 80px;
+  padding: 80px 108px 85px 108px;
   background-color: var(--background);
 }
 
@@ -16,6 +16,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .practicum__text {
@@ -114,4 +115,16 @@
 
 .practicum__link:hover {
   cursor: pointer;
+}
+
+@media screen and (max-width: 1023.98px) {
+  .practicum {
+    padding: 50px 50px 50px 50px;
+  }
+}
+
+@media screen and (max-width: 549.98px) {
+  .practicum {
+    padding: 36px 16px 36px 16px;
+  }
 }
