--- a/src/components/main/vacancies/vacancies.css
+++ b/src/components/main/vacancies/vacancies.css
@@ -1,6 +1,6 @@
 .vacancies {
   padding: 80px 108px 80px 108px;
-  background-color: #eaeaea;
+  background-color: var(--background);
   min-height: 100px;
 }
 
@@ -10,12 +10,12 @@
   font-weight: 500;
   font-size: 40px;
   line-height: 47px;
+  color: var(--black);
 }
 
 .vacancies__job-container {
   padding: 0;
-  margin: 0;
-  margin-bottom: 24px;
+  margin: 0 0 14px 0;
   list-style-type: none;
   display: flex;
   flex-direction: row;
@@ -29,7 +29,7 @@
   font-weight: 700;
   font-size: 20px;
   line-height: 24px;
-  color: #858585;
+  color: var(--dark-gray);
 }
 
 .vacancies__job:hover {
@@ -37,7 +37,12 @@
 }
 
 .vacancies__job_active {
-  color: #000000;
+  color: var(--black);
+}
+
+.vacancies__job:last-child {
+  padding: 10px 16px 10px 24px;
+  border-radius: 0px 8px 8px 0px;
 }
 
 .vacancies__direction-container {
@@ -46,28 +51,25 @@
   list-style-type: none;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .vacancies__direction {
   margin-right: 20px;
+  margin-top: 10px;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 24px;
-  color: #858585;
+  color: var(--dark-gray);
 }
 
 .vacancies__direction_active {
-  color: #000000;
+  color: var(--black);
 }
 
 .vacancies__direction:hover {
   cursor: pointer;
-}
-
-.vacancies__job:last-child {
-  padding: 10px 16px 10px 24px;
-  border-radius: 0px 8px 8px 0px;
 }
 
 .vacancies__container {
@@ -76,8 +78,8 @@
   list-style-type: none;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(1, 220px);
-  grid-auto-rows: minmax(min-content, max-content);
+  grid-template-rows: minmax(220px, max-content);
+  grid-auto-rows: minmax(220px, max-content);
   gap: 24px;
   justify-content: center;
 }
@@ -88,6 +90,7 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 24px;
+  color: var(--black);
 }
 
 .vacancies__button {
@@ -114,6 +117,7 @@
 }
 
 .vacancies__new-vacancy {
+  margin-top: 10px;
   display: flex;
   flex-direction: row;
   align-items: baseline;
@@ -129,8 +133,99 @@
 
 .vacancies__new-vacancy-text {
   margin: 0;
+  width: 176px;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 24px;
+  color: var(--black);
+}
+
+@media screen and (max-width: 1023.98px) {
+  .vacancies {
+    padding: 50px 50px 50px 50px;
+  }
+  .vacancies__container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .vacancies__direction-container {
+    margin: 0 0 12px 0;
+  }
+}
+
+@media screen and (max-width: 630px) {
+  .vacancies__container {
+    grid-template-columns: 1fr;
+    grid-template-rows: minmax(164px, max-content);
+    grid-auto-rows: minmax(164px, max-content);
+  }
+  .vacancies__block-direction {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+  }
+  .vacancies__new-vacancy {
+    margin-bottom: 23px;
+  }
+}
+
+@media screen and (max-width: 549.98px) {
+  .vacancies {
+    padding: 32px 16px 32px 16px;
+  }
+
+  .vacancies__title {
+    margin: 0 0 24px;
+    font-weight: 500;
+    font-size: 28px;
+    line-height: 32px;
+  }
+
+  .vacancies__job-container {
+    margin: 0 0 16px 0;
+  }
+
+  .vacancies__job {
+    padding: 8px 14px 8px 14px;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 22px;
+    text-align: center;
+  }
+
+  .vacancies__job:last-child {
+    padding: 8px 14px 8px 14px;
+  }
+
+  .vacancies__direction {
+    margin-right: 20px;
+    margin-top: 10px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  .vacancies__new-vacancy {
+    margin-top: 28px;
+  }
+
+  .vacancies__new-vacancy-logo {
+    margin-right: 8px;
+    width: 10px;
+    height: 10px;
+  }
+
+  .vacancies__new-vacancy-text {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16px;
+  }
+
+  .vacancies__button {
+    margin: 24px 0 0 0;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+  }
 }
