--- a/src/components/main/vacancies/vacancy/vacancy.css
+++ b/src/components/main/vacancies/vacancy/vacancy.css
@@ -1,9 +1,8 @@
 .vacancy {
   position: relative;
   width: 100%;
-  height: 220px;
+  height: 100%;
   margin: 0;
-  cursor: pointer;
 }
 
 .vacancy__front {
@@ -13,7 +12,7 @@
   z-index: 2;
   width: 100%;
   height: 100%;
-  background: #fff;
+  background: var(--white);
   transition: transform 1s linear 0.5s;
   transition-property: transform;
   backface-visibility: hidden;
@@ -25,13 +24,13 @@
 
 .vacancy__back {
   transition: transform 1s linear 0.5s;
-  position: absolute;
+  position: sticky;
   left: 0;
   top: 0;
   z-index: 1;
   width: 100%;
   height: 100%;
-  background: #fff;
+  background: var(--white);
   transform: rotateY(-180deg);
   opacity: 1;
   transition-property: transform;
@@ -65,6 +64,7 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 24px;
+  color: var(--dark-gray);
 }
 
 .vacancy__profession-logo {
@@ -81,14 +81,32 @@
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
+  word-wrap: break-word;
+  color: var(--black);
+}
+
+.vacancy__salary-contauner {
+  margin: 0 20px 20px 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.vacancy__salary-arrow {
+  min-width: 37px;
+  height: 24px;
+  background: center / contain no-repeat url(../../../../images/Arrow.svg);
 }
 
 .vacancy__salary {
-  margin: 0 20px 20px 20px;
+  margin: 0 20px 0 0;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 24px;
+  word-wrap: break-word;
+  color: var(--black);
 }
 
 .vacancy__back-container {
@@ -116,15 +134,68 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 24px;
-  color: rgba(0, 0, 0, 0.5);
+  color: var(--black);
 }
 
 .vacancy__info-more {
-  margin: 0 50px 20px 0;
+  margin: 8px 50px 20px 0;
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
   line-height: 122%;
   text-align: end;
   color: var(--blue);
+  text-decoration: none;
+}
+
+.vacancy__info-more:hover {
+  cursor: pointer;
+  opacity: 0.8;
+}
+
+@media screen and (max-width: 549.98px) {
+  .vacancy__profession {
+    margin: 12px 12px 4px 12px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  .vacancy__well {
+    margin: 0px 12px 0 12px;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 24px;
+  }
+
+  .vacancy__salary-contauner {
+    margin: 0 12px 12px 12px;
+  }
+
+  .vacancy__salary {
+    margin: 0 10px 0 0;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  .vacancy__info-title {
+    margin: 12px 0 4px 12px;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 22px;
+  }
+
+  .vacancy__info {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  .vacancy__info-more {
+    margin: 8px 12px 12px 0;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+  }
 }
