--- a/src/components/main/practicum/practicum.css
+++ b/src/components/main/practicum/practicum.css
@@ -123,8 +123,82 @@
   }
 }
 
+@media screen and (max-width: 767.98px) {
+  .practicum__text {
+    margin-top: 20px;
+  }
+}
+
 @media screen and (max-width: 549.98px) {
   .practicum {
-    padding: 36px 16px 36px 16px;
+    padding: 52px 16px 32px 16px;
+  }
+
+  .practicum__title {
+    margin: 0 0 22px 0;
+    font-weight: 500;
+    font-size: 28px;
+    line-height: 32px;
+    text-align: center;
+  }
+
+  .practicum__container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  .practicum__text {
+    margin-top: 16px;
+    width: 164px;
+    height: 164px;
+  }
+
+  .practicum__text-top {
+    width: 164px;
+    font-weight: 500;
+    font-size: 36px;
+    line-height: 110%;
+    height: 82px;
+  }
+
+  .practicum__text:nth-child(2n) .practicum__text-top {
+    width: 162px;
+  }
+  .practicum__text:nth-child(2n) .practicum__text-bottom {
+    background-color: var(--light-blue);
+  }
+
+  .practicum__text-bottom {
+    width: 164px;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 24px;
+    height: 82px;
+  }
+
+  .practicum__text:nth-child(2n + 1) .practicum__text-bottom {
+    width: 162px;
+  }
+
+  .practicum__text-link {
+    width: 164px;
+    height: 164px;
+  }
+
+  .practicum__img-arrow {
+    width: 164px;
+    height: 164px;
+  }
+
+  .practicum__text-content {
+    margin: 10px;
+  }
+
+  .practicum__link {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 24px;
   }
 }
