--- a/src/components/main/howToBecome/howToBecome.css
+++ b/src/components/main/howToBecome/howToBecome.css
@@ -82,6 +82,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
+  background: var(--background);
 }
 
 .howToBecome__list-wrapper {
@@ -209,6 +210,7 @@
 .howToBecome__button:hover {
   background: var(--blue-hover);
   cursor: pointer;
+  transition: 1s ease-in-out;
 }
 .howToBecome__button_form {
   display: none;
