--- a/src/components/main/whatAwaitsYou/whatAwaitsYou.css
+++ b/src/components/main/whatAwaitsYou/whatAwaitsYou.css
@@ -71,6 +71,7 @@
   align-items: center;
   min-height: 304px;
   position: relative;
+  background: var(--background);
 }
 
 .whatAwaitsYou__list {
