--- a/src/components/main/no-work/no-work.css
+++ b/src/components/main/no-work/no-work.css
@@ -1,6 +1,6 @@
 .no-work {
   padding: 80px 108px 96px 108px;
-  background-color: var(--gray);
+  background-color: var(--light-blue);
   display: flex;
   flex-direction: column;
   position: relative;
@@ -14,6 +14,7 @@
   font-size: 52px;
   line-height: 110%;
   color: var(--black);
+  z-index: 1;
 }
 
 .no-work__text {
@@ -23,6 +24,7 @@
   font-size: 20px;
   line-height: 26px;
   color: var(--black);
+  z-index: 1;
 }
 
 .no-work__button {
@@ -39,6 +41,7 @@
   font-size: 18px;
   line-height: 24px;
   color: var(--white);
+  z-index: 1;
 }
 
 .no-work__button:hover {
@@ -53,4 +56,48 @@
   width: 703px;
   height: 375px;
   background: center / contain no-repeat url(../../../images/Picture.png);
+  z-index: 0;
+}
+
+@media screen and (max-width: 1439.98px) {
+  .no-work__img {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 1023.98px) {
+  .no-work {
+    padding: 52px 50px 52px 50px;
+  }
+}
+
+@media screen and (max-width: 549.98px) {
+  .no-work {
+    padding: 52px 16px 52px 16px;
+    align-items: center;
+  }
+
+  .no-work__title {
+    margin: 0 0 16px 0;
+    font-weight: 500;
+    font-size: 36px;
+    line-height: 44px;
+    text-align: center;
+  }
+
+  .no-work__text {
+    margin: 0 0 32px 0;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    text-align: center;
+  }
+
+  .no-work__button {
+    width: 343px;
+    height: 60px;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 24px;
+  }
 }
