finish: component feedback mobile

--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,4 @@
 @import url(./components/main/vacancies/vacancies.css);
 @import url(./components/main/vacancies/vacancy/vacancy.css);
 @import url(./components/main/practicum/practicum.css);
+@import url(./components/main/feedback/feedback.css);
