--- a/src/components/main/first/first.css
+++ b/src/components/main/first/first.css
@@ -41,7 +41,8 @@
   color: var(--black);
 }
 
-.first__button {
+.first__link {
+  text-decoration: none;
   margin: 89px auto 0 108px;
   padding: 0;
   border: 0;
@@ -59,7 +60,7 @@
   backdrop-filter: blur(6px);
 }
 
-.first__button:hover {
+.first__link:hover {
   cursor: pointer;
   background: var(--blue-hover);
 }
@@ -77,7 +78,7 @@
   flex: none;
   order: 0;
   flex-grow: 0;
-  animation-duration: 30s; /* 30s */
+  animation-duration: 24.79s; /* 30s */
   animation-timing-function: linear;
   animation-iteration-count: infinite;
   animation-name: transfer;
@@ -113,27 +114,27 @@
 
 .first__bable_pozition_two {
   left: 43.61%;
-  animation-delay: 5s;
+  animation-delay: 4.12s;
 }
 
 .first__bable_pozition_three {
   left: 72.5%;
-  animation-delay: 10s;
+  animation-delay: 8.26s;
 }
 
 .first__bable_pozition_four {
   left: 50.83%;
-  animation-delay: 15s;
+  animation-delay: 12.36s;
 }
 
 .first__bable_pozition_five {
   left: 69.44%;
-  animation-delay: 20s;
+  animation-delay: 16.52s;
 }
 
 .first__bable_pozition_six {
   left: 43.61%;
-  animation-delay: 25s;
+  animation-delay: 20.65s;
 }
 
 @keyframes transfer {
@@ -189,7 +190,7 @@
     margin: 28px auto 0 8.44%;
   }
 
-  .first__button {
+  .first__link {
     margin: 89px auto 0 8.44%;
   }
 }
@@ -207,7 +208,7 @@
     line-height: 122%;
   }
 
-  .first__button {
+  .first__link {
     width: 286px;
     height: 60px;
   }
@@ -218,9 +219,6 @@
 }
 
 @media screen and (max-width: 1023.98px) {
-  .first {
-    /*padding: 50px 50px 50px 50px;/*?*/
-  }
 
   .first__title {
     width: 350px;
@@ -234,7 +232,7 @@
     line-height: 130%;
   }
 
-  .first__button {
+  .first__link {
     width: 270px;
     font-size: 15px;
   }
@@ -274,7 +272,7 @@
     line-height: 122%;
   }
 
-  .first__button {
+  .first__link {
     margin: 60px auto 20px;
     width: 286px;
     height: 60px;
@@ -289,26 +287,32 @@
 
   .first__bable_pozition_one {
     left: 100%;
+    z-index: -1;
   }
 
   .first__bable_pozition_two {
     left: 100%;
+    z-index: -1;
   }
 
   .first__bable_pozition_four {
     left: 100%;
+    z-index: -1;
   }
 
   .first__bable_pozition_three {
     left: 100%;
+    z-index: -1;
   }
 
   .first__bable_pozition_six {
     left: 100%;
+    z-index: -1;
   }
 
   .first__bable_pozition_five {
     left: 100%;
+    z-index: -1;
   }
 }
 
@@ -332,7 +336,7 @@
     line-height: 122%;
   }
 
-  .first__button {
+  .first__link {
     margin: 60px auto 20px;
     width: 286px;
     height: 60px;
@@ -363,7 +367,7 @@
     line-height: 22px;
   }
 
-  .first__button {
+  .first__link {
     margin: 60px auto 20px;
     width: 91.47%;
     height: 60px;
@@ -374,7 +378,7 @@
 
 @media screen and (max-width: 375px) {
   .first {
-    min-height: 746px;
+    height: 780px;
     background-image: url('../../../images/background_first_small.png');
   }
 
@@ -399,7 +403,7 @@
     line-height: 22px;
   }
 
-  .first__button {
+  .first__link {
     margin: 52px auto 32px;
     width: 91.47%;
     height: 60px;
@@ -413,36 +417,36 @@
 
   .first__bable_pozition_one {
     top: 309px;
-    left: 376px;
+    z-index: 1;
   }
 
   .first__bable_pozition_two {
     top: 227px;
-    left: 568px;
     animation-delay: 2s;
+    z-index: 1;
   }
 
   .first__bable_pozition_three {
     top: 227px;
-    left: 952px;
     animation-delay: 6s;
+    z-index: 1;
   }
 
   .first__bable_pozition_four {
     top: 309px;
-    left: 760px;
     animation-delay: 8s;
+    z-index: 1;
   }
 
   .first__bable_pozition_five {
     top: 227px;
-    left: 1336px;
     animation-delay: 10s;
+    z-index: 1;
   }
 
   .first__bable_pozition_six {
     top: 309px;
-    left: 1144px;
     animation-delay: 4s;
+    z-index: 1;
   }
 }
