--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,4 +1,10 @@
 .header {
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 5;
+  background-color: white;
+  width: calc(100% - 108px - 108px);
   padding: 0 108px;
   min-height: 84px;
   display: flex;
