--- a/src/components/main/howToBecome/howToBecome.css
+++ b/src/components/main/howToBecome/howToBecome.css
@@ -134,11 +134,11 @@
 }
 
 .howToBecome__task_first {
-  background-color: var(--gray);
+  background-color: var(--white);
 }
 
 .howToBecome__task_second {
-  background-color: var(--white);
+  background-color: var(--gray);
 }
 
 .howToBecome__task_third {
@@ -146,15 +146,15 @@
 }
 
 .firstTask_animation {
-  animation: 1s ease-in-out moveRectangle1 both;
+  animation: 2s ease-in-out moveRectangle1 both;
 }
 
 .secondTask_animation {
-  animation: 1s ease-in-out 1s moveRectangle2 both;
+  animation: 2s ease-in-out 0.45s moveRectangle2 both;
 }
 
 .thirdTask_animation {
-  animation: 1s ease-in-out 2s moveRectangle3 both;
+  animation: 2s ease-in-out 0.9s moveRectangle3 both;
 }
 
 .howToBecome__context {
@@ -195,7 +195,7 @@
   font-family: 'Yandex Sans Text';
   font-style: normal;
   font-weight: 500;
-  font-size: 16px;
+  font-size: 20px;
   line-height: 125%;
   display: flex;
   flex-direction: row;
@@ -204,14 +204,14 @@
 }
 
 .button_animation {
-  animation: 1s ease-in-out 3s moveButton both;
+  animation: 2s ease-in-out 1.35s moveButton both;
 }
 
 .howToBecome__button:hover {
-  background: var(--blue-hover);
+  background: var(--blue-pressed);
   cursor: pointer;
-  transition: 1s ease-in-out;
 }
+
 .howToBecome__button_form {
   display: none;
 }
@@ -222,14 +222,17 @@
     justify-content: flex-start;
     align-items: center;
   }
+
   .howToBecome__task {
     position: relative;
     height: 128px;
   }
+
   .howToBecome__button{
     width: 396px;
     position: relative;
   }
+
   .howToBecome__list {
     margin-bottom: 16px;
     flex-direction: column;
@@ -238,6 +241,7 @@
     height: 100%;
     gap: 16px;
   }
+
   .firstTask_animation,
   .secondTask_animation,
   .thirdTask_animation,
@@ -263,11 +267,14 @@
   .howToBecome__button {
     width: 350px;
   }
+
   .howToBecome__header {
     margin-top: 36px;
     font-size: 28px;
     line-height: 114%;
+    font-weight: 500;
   }
+
   .howToBecome__list-wrapper {
     margin: 0;
     margin-top: 24px;
@@ -277,9 +284,10 @@
 @media (max-width: 375px) {
   .howToBecome {
     padding: 0 16px;
-    align-items: flex-start;
+    align-items: center;
     box-sizing: border-box;
   }
+
   .howToBecome__task {
     width: 343px;
     height: 96px;
@@ -287,6 +295,7 @@
     gap: 12px;
     position: absolute;
   }
+
   .howToBecome__button {
     margin-bottom: 36px;
     width: 343px;
@@ -298,10 +307,12 @@
     position: absolute;
     top: 348px;
   }
+
   .howToBecome__counter {
     font-size: 28px;
     line-height: 114%;
   }
+
   .howToBecome__context {
     font-size: 16px;
     line-height: 125%;
@@ -313,37 +324,41 @@
     margin: 0;
     display: flex;
   }
-  .howToBecome__button_connect {
-    display: none;
-  }
+
   .howToBecome__list-wrapper {
     position: relative;
     height: 444px;
   }
+
   .howToBecome__list {
     height: 100%;
     margin: 0;
   }
 
   .firstTask_animation {
-    animation: 1s ease-in-out moveRectangle1_mobile both;
+    animation: 2s ease-in-out moveRectangle1_mobile both;
   }
+
   .secondTask_animation {
-    animation: 1s ease-in-out 1s moveRectangle2_mobile both;
+    animation: 2s ease-in-out 0.45s moveRectangle2_mobile both;
   }
+
   .thirdTask_animation {
-    animation: 1s ease-in-out 2s moveRectangle3_mobile both;
+    animation: 2s ease-in-out 0.9s moveRectangle3_mobile both;
   }
+
   .button_animation {
-    animation: 1s ease-in-out 3s moveButton both;
+    animation: 2s ease-in-out 1.35s moveButton both;
   }
 
   .howToBecome__task_first {
     top: 0;
   }
+
   .howToBecome__task_second {
     top: 116px;
   }
+
   .howToBecome__task_third {
     top: 232px;
   }
