--- a/src/components/main/whatAwaitsYou/whatAwaitsYou.css
+++ b/src/components/main/whatAwaitsYou/whatAwaitsYou.css
@@ -20,7 +20,7 @@
 }
 @keyframes Rectangle1_mobile {
   0% {
-    right: -300px;
+    right: -1000px;
   }
   100% {
     right: 0;
@@ -128,15 +128,15 @@
 }
 
 .firstAnimation {
-  animation: 1s ease-in-out Rectangle1 both;
+  animation: 2s ease-in-out Rectangle1 both;
 }
 
 .secondAnimation {
-  animation: 1s ease-in-out 1s Rectangle2 both;
+  animation: 2s ease-in-out 0.25s Rectangle2 both;
 }
 
 .thirdAnimation {
-  animation: 1s ease-in-out 2s Rectangle3 both;
+  animation: 2s ease-in-out 0.9s Rectangle3 both;
 }
 
 .whatAwaitsYou__context {
@@ -168,9 +168,11 @@
     justify-content: flex-start;
     align-items: center;
   }
+
   .whatAwaitsYou__header {
     margin-top: 48px;
   }
+
   .whatAwaitsYou__list {
     width: 100%;
     height: 100%;
@@ -181,15 +183,18 @@
     height: 100%;
     gap: 16px;
   }
+
   .whatAwaitsYou__item {
     position: relative;
     height: 128px;
   }
+
   .firstAnimation,
   .secondAnimation,
   .thirdAnimation {
     animation: 2s ease-in-out inAndOut;;
   }
+
   .whatAwaitsYou__context {
     margin: 0;
     width: 100%;
@@ -227,7 +232,7 @@
 @media (max-width: 375px) {
   .whatAwaitsYou {
     padding: 0 16px;
-    align-items: flex-start;
+    align-items: center;
     box-sizing: border-box;
   }
   .whatAwaitsYou__item {
@@ -250,15 +255,15 @@
     top: 216px;
   }
   .firstAnimation {
-    animation: 1s ease-in-out Rectangle1_mobile both;
+    animation: 2s ease-in-out Rectangle1_mobile both;
   }
 
   .secondAnimation {
-    animation: 1s ease-in-out 1s Rectangle2_mobile both;
+    animation: 2s ease-in-out 0.45s Rectangle2_mobile both;
   }
 
   .thirdAnimation {
-    animation: 1s ease-in-out 2s Rectangle3_mobile both;
+    animation: 2s ease-in-out 0.9s Rectangle3_mobile both;
   }
   .whatAwaitsYou__context_mobile1,
   .whatAwaitsYou__context_mobile2,
