--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,4 +1,10 @@
 .header {
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 5;
+  background-color: white;
+  width: calc(100% - 108px - 108px);
   padding: 0 108px;
   min-height: 84px;
   display: flex;
@@ -30,6 +36,10 @@
   text-decoration: none;
 }
 
+.header__link:hover {
+  font-weight: 500;
+}
+
 .header__link:last-child {
   margin-right: 0;
 }
@@ -53,6 +63,11 @@
   text-decoration: none;
 }
 
+.header__link-border:hover {
+  border: 2px solid var(--blue-hover);
+  color: var(--blue-hover);
+}
+
 @media screen and (max-width: 1199.98px) {
   .header__link {
     margin-right: 30px;
@@ -66,6 +81,7 @@
 @media screen and (max-width: 1023.98px) {
   .header {
     padding: 0 50px;
+    width: calc(100% - 50px - 50px);
   }
   .header__link {
     display: none;
@@ -75,6 +91,7 @@
 @media screen and (max-width: 549.98px) {
   .header {
     padding: 0 16px;
+    width: calc(100% - 16px - 16px);
     min-height: 68px;
   }
   .header__link {
