--- a/src/components/main/vacancies/vacancies.css
+++ b/src/components/main/vacancies/vacancies.css
@@ -26,9 +26,9 @@
   padding: 10px 24px 10px 16px;
   border-radius: 8px 0px 0px 8px;
   font-style: normal;
-  font-weight: 700;
+  font-weight: 400;
   font-size: 20px;
-  line-height: 24px;
+  line-height: 26px;
   color: var(--dark-gray);
 }
 
@@ -37,6 +37,9 @@
 }
 
 .vacancies__job_active {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
   color: var(--black);
 }
 
@@ -65,6 +68,7 @@
 }
 
 .vacancies__direction_active {
+  font-weight: 500;
   color: var(--black);
 }
 
@@ -104,6 +108,7 @@
 
 .vacancies__button:hover {
   cursor: pointer;
+  color: var(--blue-hover);
 }
 
 .vacancies__button_hidden {
@@ -212,8 +217,8 @@
 
   .vacancies__new-vacancy-logo {
     margin-right: 8px;
-    width: 10px;
-    height: 10px;
+    width: 12.8px;
+    height: 12.8px;
   }
 
   .vacancies__new-vacancy-text {
