--- a/src/components/main/vacancies/vacancy/vacancy.css
+++ b/src/components/main/vacancies/vacancy/vacancy.css
@@ -150,7 +150,7 @@
 
 .vacancy__info-more:hover {
   cursor: pointer;
-  opacity: 0.8;
+  color: var(--blue-hover);
 }
 
 @media screen and (max-width: 549.98px) {
@@ -197,5 +197,10 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 20px;
+  }
+
+  .vacancy__profession-logo {
+    width: 12.8px;
+    height: 12.8px;
   }
 }
